[gd_scene load_steps=38 format=3 uid="uid://cp2g3y2snyors"]

[ext_resource type="Script" path="res://scenes/chars/monsters/monster_src/enemy1.gd" id="1_jfjr8"]
[ext_resource type="Texture2D" uid="uid://b65wffhttmf6c" path="res://resources/assets/spr/enemy1/enemy_walk_melee.png" id="2_4fdwm"]
[ext_resource type="Texture2D" uid="uid://cxvo4wrq6mcg8" path="res://resources/assets/spr/enemy1/inimigo2.png" id="3_lfas8"]
[ext_resource type="PackedScene" uid="uid://qyeunann8akq" path="res://scenes/ui/enemy_hud.tscn" id="3_yk4pu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhf08"]
atlas = ExtResource("2_4fdwm")
region = Rect2(0, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_iueo7"]
atlas = ExtResource("2_4fdwm")
region = Rect2(29, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qafti"]
atlas = ExtResource("2_4fdwm")
region = Rect2(58, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_timhi"]
atlas = ExtResource("2_4fdwm")
region = Rect2(87, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n3vx"]
atlas = ExtResource("2_4fdwm")
region = Rect2(116, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyujo"]
atlas = ExtResource("2_4fdwm")
region = Rect2(145, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ccwt"]
atlas = ExtResource("2_4fdwm")
region = Rect2(174, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyx5t"]
atlas = ExtResource("2_4fdwm")
region = Rect2(203, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdn3i"]
atlas = ExtResource("2_4fdwm")
region = Rect2(232, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2drkt"]
atlas = ExtResource("2_4fdwm")
region = Rect2(261, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_44o13"]
atlas = ExtResource("2_4fdwm")
region = Rect2(290, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwaky"]
atlas = ExtResource("2_4fdwm")
region = Rect2(319, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_uunwy"]
atlas = ExtResource("2_4fdwm")
region = Rect2(348, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gf5y"]
atlas = ExtResource("2_4fdwm")
region = Rect2(377, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbyk"]
atlas = ExtResource("3_lfas8")
region = Rect2(0, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_l833t"]
atlas = ExtResource("3_lfas8")
region = Rect2(29, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r6s6"]
atlas = ExtResource("3_lfas8")
region = Rect2(58, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj06g"]
atlas = ExtResource("3_lfas8")
region = Rect2(87, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_klwi0"]
atlas = ExtResource("3_lfas8")
region = Rect2(116, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_27x14"]
atlas = ExtResource("3_lfas8")
region = Rect2(145, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5gu7"]
atlas = ExtResource("3_lfas8")
region = Rect2(174, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe3i2"]
atlas = ExtResource("3_lfas8")
region = Rect2(203, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t40d"]
atlas = ExtResource("3_lfas8")
region = Rect2(232, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7c6e"]
atlas = ExtResource("3_lfas8")
region = Rect2(261, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogq6b"]
atlas = ExtResource("3_lfas8")
region = Rect2(290, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sooy"]
atlas = ExtResource("3_lfas8")
region = Rect2(319, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bewwb"]
atlas = ExtResource("3_lfas8")
region = Rect2(348, 0, 29, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_betlu"]
atlas = ExtResource("3_lfas8")
region = Rect2(377, 0, 29, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_r2ht1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhf08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iueo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qafti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_timhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n3vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyujo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ccwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyx5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdn3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2drkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44o13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwaky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uunwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gf5y")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l833t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r6s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj06g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klwi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27x14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5gu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe3i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t40d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7c6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogq6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sooy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bewwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_betlu")
}],
"loop": true,
"name": &"walk_purify",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_flxod"]
radius = 8.0
height = 88.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6d4h"]
size = Vector2(1815.5, 347.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1r4a3"]
radius = 7.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fmncy"]
radius = 16.0
height = 88.0

[node name="Enemy1" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_jfjr8")

[node name="Texture" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_r2ht1")
animation = &"walk_purify"
frame_progress = 0.556024

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_flxod")

[node name="Radar" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar"]
shape = SubResource("RectangleShape2D_s6d4h")

[node name="Attack" type="Area2D" parent="."]

[node name="Area" type="CollisionShape2D" parent="Attack"]
position = Vector2(32, 0)
shape = SubResource("CapsuleShape2D_1r4a3")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="EnemyHUD" parent="." instance=ExtResource("3_yk4pu")]

[node name="LeftTerrainDetector" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 70)
collision_mask = 3

[node name="RightTerrainDetector" type="RayCast2D" parent="."]
position = Vector2(20, 0)
target_position = Vector2(0, 70)
collision_mask = 3

[node name="MouseArea" type="Area2D" parent="."]
collision_layer = 268435456
collision_mask = 268435456

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("CapsuleShape2D_fmncy")

[connection signal="body_entered" from="Radar" to="." method="_on_radar_body_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_radar_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
